--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="index.html" style="padding: 10px 20px;">Thuis</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://gustycadets.undo.it:25566/" target="_blank" style="padding: 10px 20px;">Dynmap</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://gustycadets.undo.it:25566/" target="_blank" style="padding: 10px 20px;">Bluemap</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://discord.gg/FqSaqfxf2Y" target="_blank" style="padding: 10px 20px;">Discord</a>
 </li></ul>
           </div>
@@ -46,7 +46,7 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html">Thuis</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="http://gustycadets.undo.it:25566/" target="_blank">Dynmap</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="http://gustycadets.undo.it:25566/" target="_blank">Bluemap</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://discord.gg/FqSaqfxf2Y" target="_blank">Discord</a>
 </li></ul>
               </div>
